04.k8s_test/01.istio/03.function_test2/01.traffic_route/01.create_istio_object/destnationrule-nginx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx1
spec:
  host: nginx1
  subsets:
  - name: num1
    labels:
      postnum: "1"
