04.k8s_test/01.istio/03.function_test2/01.traffic_route/01.create_istio_object/gateway-nginx.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# virtual service for gateway 
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  ingress-gateway
  - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx-1
        subset: num1
