04.k8s_test/01.istio/03.function_test2/01.traffic_route/01.create_istio_object/nginx-virturalservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
    - nginx
  http:
  - route:
    - destination:
        host: nginx
        subset: num0
