04.k8s_test/01.istio/03.function_test2/01.traffic_route/01.create_istio_object/virtual-service-nginx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-info
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: nginx1
        port:
          number: 80
