04.k8s_test/01.istio/03.function_test2/01.traffic_route/01.create_istio_object/virtual-service-nginx1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx1
spec:
  hosts:
  - nginx-1
  gateways:
  - nginx-gateway
  http:
  - match:
    - url:
      prefix: /test/
    route:
    - destination:
        host: nginx
        subset: num1
