04.k8s_test/01.istio/03.function_test2/01.traffic_route/01.create_istio_object/vs-nginx-1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx1
spec:
  hosts:
    - nginx1
  http:
  - route:
    - destination:
        host: nginx1
        subset: num1
